commit login / cadastro
css

--- a/nimbus-front/index.html
+++ b/nimbus-front/index.html
@@ -18,19 +18,29 @@
       </div>
       <div class="inicio-login-cadastro">
         <nav class="login-cadastro">
-          <a href="login.html" class="login">login</a>
-          <a href="" class="cadastro">cadastro</a>
+          <a href="login.html" class="login">ENTRAR</a>
+          <a href="" class="cadastro">CADASTRE-SE</a>
         </nav>
       </div>
     </section>
 
     <!--ÁREA DAS BOAS VINDAS -->
     <section class="inicio-bv">
-      <div class="incio-imagem-bv">
-        <img class="imagem-bv" src="" alt="Logo NIMBUS" />
-      </div>
       <div class="inicio-titulo-bv">
-        <h1 class="titulo-bv">BEM VINDO(A)!!!</h1>
+        <h1 class="titulo-bv-1">SEJA</h1>
+        <h1 class="titulo-bv-2">BEM-VINDO</h1>
+        <h1 class="titulo-bv-3">AO NIMBUS</h1>
+      </div>
+      <div class="inicio-button">
+        <button type="submit">VENHA PARTICIPAR JÁ</button>        
+      </div>
+    </section>
+
+    <section class="inicio-bv-2">
+      <div class="inicio-titulo-bv-2">
+        <h1 class="titulo-bv-4">TESTE O SEU CONHECIMENTO.</h1>
+        <h1 class="titulo-bv-4">ALCANCE O MELHOR RESULTADO.</h1>
+        <h1 class="titulo-bv-4">SE SUPERE A CADA TENTIVA.</h1>
       </div>
     </section>
   </body>
