--- a/nimbus-front/login.html
+++ b/nimbus-front/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html class="h-full bg-gray" lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,24 +7,66 @@
       name="description"
       content="Uma plataforma gameficada que auxliará no aprendizado de estudantes"
     />
-    <title>Nimbus: Login</title>
+    <title>Login</title>
     <link rel="stylesheet" type="text/css" href="login.css" />
+    <link rel="icon" type="image/svg-icon" href="./imagem/logo.svg"/>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    <div class="login">
-      <h1>Bem Vindo(a) de Volta!</h1>
-      <form method="post">
-        <input type="text" name="u" placeholder="Usuário" required="required" />
-        <input
-          type="password"
-          name="p"
-          placeholder="Senha"
-          required="required"
-        />
-        <button type="submit" class="btn btn-primary btn-block btn-large">
-          Me deixe entrar!
-        </button>
-      </form>
-    </div>
+  <body class="h-full">
+   <!--
+  This example requires some changes to your config:
+  
+  ```
+  // tailwind.config.js
+  module.exports = {
+    // ...
+    plugins: [
+      // ...
+      require('@tailwindcss/forms'),
+    ],
+  }
+  ```
+-->
+<!--
+  This example requires updating your template:
+
+  ```
+  <html class="h-full bg-white">
+  <body class="h-full">
+  ```
+-->
+<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+  <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+    <img class="mx-auto h-20 w-auto" src="C:\Users\Aluno\Desktop\nimbus-what--main\imagem\logo_2.svg" alt="Nimbus">
+    <h1 class="mt-10 text-center text-4xl font-bold leading-9 tracking-tight text-white">Entre no Nimbus</h1>
+  </div>
+
+  <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+    <form class="space-y-6" action="#" method="POST">
+      <div>
+        <label for="email" class="block text-sm font-medium leading-6 text-white">Endereço de email</label>
+        <div class="mt-2">
+          <input id="email" name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+        </div>
+      </div>
+
+      <div>
+        <div class="flex items-center justify-between">
+          <label for="password" class="block text-sm font-medium leading-6 text-white">Senha</label>
+        </div>
+        <div class="mt-2">
+          <input id="password" name="password" type="password" autocomplete="current-password" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+        </div>
+      </div>
+
+      <div>
+        <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Entrar</button>
+      </div>
+    </form>
+
+    
+  </div>
+</div>
+
   </body>
 </html>
