--- a/nimbus-front/cadastro.html
+++ b/nimbus-front/cadastro.html
@@ -37,7 +37,7 @@
 -->
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-    <h1 class="mt-10 text-center text-4xl font-bold leading-9 tracking-tight text-white">Crie sua conta.</h1>
+    <h1 class="mt-10 text-center text-4xl font-bold leading-9 tracking-tight text-white">Crie sua conta na Nimbus.</h1>
   </div>
 
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
@@ -45,9 +45,24 @@
       <div>
         <label for="email" class="block text-sm font-medium leading-6 text-white">Endereço de email</label>
         <div class="mt-2">
-          <input id="email" name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+          <input id="email" name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 ">
         </div>
       </div>
+
+      <div>
+        <label for="nome" class="block text-sm font-medium leading-6 text-white">Nome</label>
+        <div class="mt-2">
+          <input id="nome" name="nome" type="text" autocomplete="nome" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+        </div>
+      </div>
+
+      <div>
+        <label for="sobrenome" class="block text-sm font-medium leading-6 text-white">Sobrenome</label>
+        <div class="mt-2">
+          <input id="sobrenome" name="sobrenome" type="text" autocomplete="sobrenome" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+        </div>
+      </div>
+
 
       <div>
         <div class="flex items-center justify-between">
@@ -55,6 +70,13 @@
         </div>
         <div class="mt-2">
           <input id="password" name="password" type="password" autocomplete="current-password" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+        </div>
+      </div>
+
+      <div>
+        <label for="data" class="block text-sm font-medium leading-6 text-white">Data de Nascimento</label>
+        <div class="mt-2">
+          <input id="data" name="data" type="date" autocomplete="sobrenome" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
         </div>
       </div>
 
