--- a/nimbus-front/cadastro.html
+++ b/nimbus-front/cadastro.html
@@ -9,11 +9,11 @@
     />
     <title>Cadastre-se</title>
     <link rel="stylesheet" type="text/css" href="cadastro.css" />
-    <link rel="icon" type="image/svg-icon" href="./imagem/logo.svg"/>
+    <link rel="icon" type="image/svg-icon" href="./imagem/logo.svg" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="h-full">
-   <!--
+    <!--
   This example requires some changes to your config:
   
   ```
@@ -27,7 +27,7 @@
   }
   ```
 -->
-<!--
+    <!--
   This example requires updating your template:
 
   ```
@@ -35,59 +35,119 @@
   <body class="h-full">
   ```
 -->
-<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
-  <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-    <h1 class="mt-10 text-center text-4xl font-bold leading-9 tracking-tight text-white">Crie sua conta na Nimbus.</h1>
-  </div>
-
-  <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-    <form class="space-y-6" action="#" method="POST">
-      <div>
-        <label for="email" class="block text-sm font-medium leading-6 text-white">Endereço de email</label>
-        <div class="mt-2">
-          <input id="email" name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 ">
-        </div>
+    <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+      <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+        <h1
+          class="mt-10 text-center text-4xl font-bold leading-9 tracking-tight text-white"
+        >
+          Crie sua conta na Nimbus.
+        </h1>
       </div>
 
-      <div>
-        <label for="nome" class="block text-sm font-medium leading-6 text-white">Nome</label>
-        <div class="mt-2">
-          <input id="nome" name="nome" type="text" autocomplete="nome" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-        </div>
+      <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+        <form class="space-y-6" action="#" method="POST">
+          <div>
+            <label
+              for="email"
+              class="block text-sm font-medium leading-6 text-white"
+              >Endereço de email</label
+            >
+            <div class="mt-2">
+              <input
+                id="email"
+                name="email"
+                type="email"
+                autocomplete="email"
+                required
+                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+              />
+            </div>
+          </div>
+
+          <div>
+            <label
+              for="nome"
+              class="block text-sm font-medium leading-6 text-white"
+              >Nome</label
+            >
+            <div class="mt-2">
+              <input
+                id="nome"
+                name="nome"
+                type="text"
+                autocomplete="nome"
+                required
+                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+              />
+            </div>
+          </div>
+
+          <div>
+            <label
+              for="sobrenome"
+              class="block text-sm font-medium leading-6 text-white"
+              >Sobrenome</label
+            >
+            <div class="mt-2">
+              <input
+                id="sobrenome"
+                name="sobrenome"
+                type="text"
+                autocomplete="sobrenome"
+                required
+                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+              />
+            </div>
+          </div>
+
+          <div>
+            <div class="flex items-center justify-between">
+              <label
+                for="password"
+                class="block text-sm font-medium leading-6 text-white"
+                >Senha</label
+              >
+            </div>
+            <div class="mt-2">
+              <input
+                id="password"
+                name="password"
+                type="password"
+                autocomplete="current-password"
+                required
+                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+              />
+            </div>
+          </div>
+
+          <div>
+            <label
+              for="data"
+              class="block text-sm font-medium leading-6 text-white"
+              >Data de Nascimento</label
+            >
+            <div class="mt-2">
+              <input
+                id="data"
+                name="data"
+                type="date"
+                autocomplete="sobrenome"
+                required
+                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+              />
+            </div>
+          </div>
+
+          <div>
+            <button
+              type="submit"
+              class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+            >
+              Entrar
+            </button>
+          </div>
+        </form>
       </div>
-
-      <div>
-        <label for="sobrenome" class="block text-sm font-medium leading-6 text-white">Sobrenome</label>
-        <div class="mt-2">
-          <input id="sobrenome" name="sobrenome" type="text" autocomplete="sobrenome" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-        </div>
-      </div>
-
-
-      <div>
-        <div class="flex items-center justify-between">
-          <label for="password" class="block text-sm font-medium leading-6 text-white">Senha</label>
-        </div>
-        <div class="mt-2">
-          <input id="password" name="password" type="password" autocomplete="current-password" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-        </div>
-      </div>
-
-      <div>
-        <label for="data" class="block text-sm font-medium leading-6 text-white">Data de Nascimento</label>
-        <div class="mt-2">
-          <input id="data" name="data" type="date" autocomplete="sobrenome" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-        </div>
-      </div>
-
-      <div>
-        <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Entrar</button>
-      </div>
-    </form>
-
-    
-  </div>
-</div>
-
+    </div>
   </body>
 </html>
