--- a/nimbus-front/index.html
+++ b/nimbus-front/index.html
@@ -19,29 +19,31 @@
       <div class="inicio-login-cadastro">
         <nav class="login-cadastro">
           <a href="login.html" class="login">ENTRAR</a>
-          <a href="" class="cadastro">CADASTRE-SE</a>
+          <a href="cadastro.html" class="cadastro">CADASTRE-SE</a>
         </nav>
       </div>
     </section>
 
     <!--ÁREA DAS BOAS VINDAS -->
-    <section class="inicio-bv">
-      <div class="inicio-titulo-bv">
-        <h1 class="titulo-bv-1">SEJA</h1>
-        <h1 class="titulo-bv-2">BEM-VINDO</h1>
-        <h1 class="titulo-bv-3">AO NIMBUS</h1>
-      </div>
-      <div class="inicio-button">
-        <button type="submit">VENHA PARTICIPAR JÁ</button>        
-      </div>
-    </section>
-
-    <section class="inicio-bv-2">
-      <div class="inicio-titulo-bv-2">
-        <h1 class="titulo-bv-4">TESTE O SEU CONHECIMENTO.</h1>
-        <h1 class="titulo-bv-4">ALCANCE O MELHOR RESULTADO.</h1>
-        <h1 class="titulo-bv-4">SE SUPERE A CADA TENTIVA.</h1>
-      </div>
-    </section>
+    <div class="space"></div>
+      <section class="inicio-bv">
+        <div class="inicio-titulo-bv">
+          <h1 class="titulo-bv-1">SEJA</h1>
+          <h1 class="titulo-bv-2">BEM-VINDO</h1>
+          <h1 class="titulo-bv-3">AO NIMBUS</h1>
+        </div>
+        <div class="inicio-button">
+          <button type="submit">VENHA PARTICIPAR JÁ</button>
+        </div>
+      </section>
+      <div class="space-2"></div>
+      <section class="inicio-bv-2">
+        <div class="inicio-titulo-bv-2">
+          <h1 class="titulo-bv-4">TESTE O SEU CONHECIMENTO.</h1>
+          <h1 class="titulo-bv-4">ALCANCE O MELHOR RESULTADO.</h1>
+          <h1 class="titulo-bv-4">SE SUPERE A CADA TENTATIVA.</h1>
+        </div>
+      </section>
+    
   </body>
 </html>
